--- a/index.Rmd
+++ b/index.Rmd
@@ -37,11 +37,11 @@ sf_limite_corredores_cantones_web <-
   st_transform(3857)
 
 # Capa raster de infraestructura verde (en Web Mercator)
-# raster_infraestructura_verde <-
-#   raster(url_raster_infraestructura_verde) %>%
-#   aggregate(fact=c(3), fun=modal) %>% # ¡¡HAY QUE TRATAR DE ELIMINAR ESTA AGRUPACIÓN. PODRÍA FUNCIONAR AL USAR MÁS MEMORIA LINUX!!
-#   crop(sf_limite_corredores_cantones_web) %>%
-#   mask(sf_limite_corredores_cantones_web)
+raster_infraestructura_verde <-
+  raster(url_raster_infraestructura_verde) %>%
+  aggregate(fact=4, fun=modal) %>% # ¡¡HAY QUE TRATAR DE ELIMINAR ESTA AGRUPACIÓN. PODRÍA FUNCIONAR AL USAR MÁS MEMORIA LINUX!!
+  crop(sf_limite_corredores_cantones_web) %>%
+  mask(sf_limite_corredores_cantones_web)
 
 #---------------- Paletas de colores ---------------
 
@@ -97,12 +97,12 @@ leaflet() %>%
     weight = 6.0,
     group = "Límite de corredores y cantones"
   ) %>%
-  # addRasterImage(
-  #   raster_infraestructura_verde,
-  #   colors = pal,
-  #   opacity = 1,
-  #   group = "Infraestructura verde"
-  # ) %>%
+  addRasterImage(
+    raster_infraestructura_verde,
+    colors = pal,
+    opacity = 1,
+    group = "Infraestructura verde"
+  ) %>%
   addLegend(
     title = "Infraestructura verde", 
     position = "bottomright",
